<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/groupProfile">
        <item
            android:id="@+id/userInfoItemMenu"
            android:icon="@drawable/ic_user_info"
            android:title="@string/user_information" />
        <item
            android:id="@+id/addressItemMenu"
            android:icon="@drawable/ic_address"
            android:title="@string/address" />
    </group>

    <group android:id="@+id/groupCenter">
        <item
            android:id="@+id/helpCenterItemMenu"
            android:icon="@drawable/ic_help"
            android:title="@string/help_center" />
    </group>

    <group android:id="@+id/groupApplication">
        <item
            android:id="@+id/settingsItemMenu"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/aboutItemMenu"
            android:icon="@drawable/ic_about"
            android:title="@string/about_food_and_drink" />
    </group>
</menu>
