<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".screens.forgotpassword.resetpassword.ResetPasswordFragment">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="24:24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:layout_constraintWidth_percent="0.06" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitleFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/choose_a_new_password"
        android:textSize="@dimen/sp_20"
        app:layout_constraintDimensionRatio="300:20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toEndOf="@+id/imageViewBack"
        app:layout_constraintTop_toTopOf="@+id/imageViewBack"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center|left"
        android:text="@string/please_check_your_emails_for_a_message_with_your_code_your_code_is_5_numbers_long"
        android:textSize="@dimen/sp_16"
        app:layout_constraintDimensionRatio="337:60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleFragment"
        app:layout_constraintWidth_percent="0.85" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView23"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|left"
        android:text="@string/title_new_password"
        android:textSize="@dimen/sp_16"
        app:layout_constraintDimensionRatio="337:60"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView22"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView22"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView22"
        app:layout_constraintWidth_percent="0.85" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayoutNewPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_30"
        android:hint="@string/new_password"
        app:layout_constraintDimensionRatio="331:90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView23"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetPasswordButton"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dp_250"
        android:layout_height="@dimen/dp_60"
        android:layout_below="@id/editTextLayoutNewPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/title_continue"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:backgroundTint="@color/colorCarrotOrange"
        app:cornerRadius="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayoutVerificationCode"
        app:layout_constraintVertical_bias="0.371" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayoutVerificationCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/verification_code"
        app:layout_constraintDimensionRatio="331:90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayoutNewPassword"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:inputType="text"
            android:lines="1"
            android:textIsSelectable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/try_generating_a_new_code"
        app:layout_constraintEnd_toEndOf="@+id/editTextLayoutVerificationCode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextLayoutVerificationCode"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayoutVerificationCode" />

    <TextView
        android:id="@+id/textViewGeneratingCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generating_code"
        android:textColor="@color/colorCarrotOrange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.523" />

</androidx.constraintlayout.widget.ConstraintLayout>
