<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    tools:context=".screens.signup.activated.ActivatedFragment">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="24:24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent="0.06" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitleFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/activate_account"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBack"
        app:layout_constraintDimensionRatio="300:20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toEndOf="@+id/imageViewBack"
        app:layout_constraintTop_toTopOf="@+id/imageViewBack"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center|left"
        android:text="@string/please_check_your_emails_for_a_message_with_your_code"
        android:textSize="@dimen/sp_16"
        app:layout_constraintDimensionRatio="337:60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleFragment"
        app:layout_constraintWidth_percent="0.85" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activateButton"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dp_250"
        android:layout_height="@dimen/dp_60"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_35"
        android:text="@string/title_continue"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:backgroundTint="@color/colorCarrotOrange"
        app:cornerRadius="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayoutVerificationCode" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayoutVerificationCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_30"
        android:hint="@string/verification_code"
        app:layout_constraintDimensionRatio="331:78"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView10"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView10"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextActivateCode"
            android:layout_width="match_parent"
            android:inputType="text"
            android:lines="1"
            android:textIsSelectable="true"
            android:layout_height="@dimen/dp_60" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

